--- a/base-project/index.html
+++ b/base-project/index.html
@@ -8,6 +8,6 @@
       <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>Welcome</h1>
+    <h1>Welcome test</h1>
   </body>
 </html>
